# swhid-test-suite

./: .coverage  .gitattributes  .gitignore  BISECTION_PROCESS.md  DEVELOPER_GUIDE.md  LICENSE  PLATFORM_ISSUES_ANALYSIS.md  PLATFORM_LIMITATIONS.md  README.md  RUST_ISSUES_INVESTIGATION.md  config.yaml  custom.html  main.py  pyproject.toml  pytest.ini  requirements.txt  results.html  rust_issues_summary.md  table.txt
.github/workflows/: bisect.yml  harness.yml  test-multi-platform.yml  test-ubuntu-scheduled.yml  test-ubuntu.yml
harness/: __init__.py  comparator.py  config.py  exceptions.py  git_manager.py  harness.py  models.py  output.py  resource_manager.py  runner.py
harness/plugins/: __init__.py  base.py  discovery.py  run_impl.py  subprocess_adapter.py
harness/utils/: constants.py  git_utils.py  subprocess_utils.py
implementations/git/: __init__.py  implementation.py
implementations/git-cmd/: __init__.py  implementation.py
implementations/go/: __init__.py  implementation.py
implementations/pygit2/: __init__.py  implementation.py
implementations/python/: __init__.py  implementation.py
implementations/ruby/: __init__.py  implementation.py
implementations/rust/: __init__.py  implementation.py
payloads/archive/: compressed.tar.bz2  nested.tar  simple.tar
payloads/content/: hello.txt  unicode.txt
payloads/negative/: README.md
scripts/: view_results.py
tests/: __init__.py
tests/integration/: __init__.py  test_implementations.py
tools/: json_diff.py  merge_results.py  test_deployment.sh  test_rust.sh  validate_config.py
(+72 files in other folders)
